tests/test-std/ui/named-variables.stderr
error[E0425]: cannot find value `var_that_definitely_exists` in this scope
 --> ui/named-variables.rs:6:15
  |
6 |     parse!(l, "test: {var_that_definitely_exists}");
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `var_that_definitely_exists` in this scope
 --> ui/named-variables.rs:7:15
  |
7 |     parse!(l, "test: {var_that_definitely_exists:,:}");
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `var_that_definitely_exists` in this scope
 --> ui/named-variables.rs:8:15
  |
8 |     parse!(l, "test: {var_that_definitely_exists:,:5}");
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `var_that_definitely_exists` in this scope
 --> ui/named-variables.rs:9:15
  |
9 |     parse!(l, "test: {var_that_definitely_exists:,:0}");
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
